#
# See the GNU Lesser General Public License in COPYING.LGPL for more details.
#

StarPU 1.4.0 (svn revision xxxx)
==============================================
New features:
  * Fault tolerance support with starpu_task_ft_failed().
  * Add get_max_size method to data interfaces for applications using data with
    variable size to express their maximal potential size.

Small changes:
  * Use the S4U interface of Simgrid instead of xbt and MSG.

StarPU 1.3.3 (git revision xxx)
==============================================

New features:
  * New semantic for starpu_task_insert() and alike parameters
    STARPU_CALLBACK_ARG, STARPU_PROLOGUE_CALLBACK_ARG, and
    STARPU_PROLOGUE_CALLBACK_POP_ARG which set respectively
    starpu_task::callback_arg_free,
    starpu_task::prologue_callback_arg_free and
    starpu_task::prologue_callback_pop_arg_free to 1 when used.
    New parameters STARPU_CALLBACK_ARG_NFREE,
    STARPU_CALLBACK_WITH_ARG_NFREE, STARPU_PROLOGUE_CALLBACK_ARG_NFREE, and
    STARPU_PROLOGUE_CALLBACK_POP_ARG_NFREE which set the corresponding
    fields of starpu_task to 0.
  * starpufft: Support 3D.
  * New modular-eager-prio scheduler.
  * Add 'ready' heuristic to modular schedulers.
  * New modular-heteroprio scheduler.
  * Add STARPU_TASK_SCHED_DATA
  * Add support for staging schedulers.
  * New modular-heteroprio-heft scheduler.
  * New dmdap "data-aware performance model (priority)" scheduler

Changes:
  * Modification in the Native Fortran interface of the functions
    fstarpu_mpi_task_insert, fstarpu_mpi_task_build and
    fstarpu_mpi_task_post_build to only take 1 parameter being the MPI
    communicator, the codelet and the various parameters for the task.

Small features:
  * New starpu_task_insert() and alike parameter STARPU_TASK_WORKERIDS
    allowing to set the fields starpu_task::workerids_len and
    starpu_task::workerids
  * New starpu_task_insert() and alike parameters
    STARPU_SEQUENTIAL_CONSISTENCY, STARPU_TASK_NO_SUBMITORDER and