@@ -22,6 +22,8 @@ New features:
   * Fault tolerance support with starpu_task_ft_failed().
   * Add get_max_size method to data interfaces for applications using data with
     variable size to express their maximal potential size.
+  * New offline tool to draw graph showing elapsed time between sent
+    or received data and their use by tasks
 
 Small changes:
   * Use the S4U interface of Simgrid instead of xbt and MSG.
